--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -158,7 +158,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>2.</strong> All the Temenos Continuous Deployment Platform 3rd parties were White Source scanned <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>3.</strong> All artifacts pushed in common GitLab and Artifactory are scanned</p>
 <p><br></p>
-<h2 id="self-service-capabilities"><strong>Self Service Capabilities</strong></h2>
+<h2 id="self-service-capabilities">Self Service Capabilities</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>1.</strong> <strong>Self Service Setup:</strong><br> 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   -   users who have the Assemble module enabled are able to <a href="http://documentation.temenos.cloud/home/techguides/factories.html">manage their factories</a>, admin <a href="http://documentation.temenos.cloud/home/techguides/components-products.html">product and component</a>s, <a href="http://documentation.temenos.cloud/home/techguides/stream.html">create streams</a>, <a href="http://documentation.temenos.cloud/home/techguides/factories.html?q=schedule%20factory#factory-scheduler">schedule</a> and <a href="http://documentation.temenos.cloud/home/techguides/factories.html?q=schedule%20factory#set-up-create-a-factory">execute factory runs</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-  all users have the option to <a href="http://documentation.temenos.cloud/home/techguides/clone-environment.html?q=clone%20envi">clone environments</a>, <a href="http://documentation.temenos.cloud/home/techguides/stage-testcases.html">manage their test cases</a> and connect to Design Studio remotely to any Azure Subscription<br>
