--- a/docfx_project/site/home/techguides/environment-creation-in-paas.html
+++ b/docfx_project/site/home/techguides/environment-creation-in-paas.html
@@ -88,7 +88,7 @@
 <li>Either click the Environments tab on the left menu and then click <strong>New Environment</strong> button on the top right corner.  </li>
 <li>Or you can already see the environment page open with the fields available to create a new environment.</li>
 </ul>
-<p><img src="images/env-tab.png" alt=""></p>
+<p><img src="./images/env-tab.png" alt=""></p>
 <p><br></p>
 <ul>
 <li>Fill Name and Description fields</li>
@@ -98,7 +98,7 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 </ul>
 <p><img src="images/env-new.png" alt=""></p>
 <p><br></p>
-<div class="NOTE"><h5>Note</h5><p>The environment creation may take around 20 minutes or more, depending on the selected template.</p>
+<div class="NOTE"><h5>Note</h5><p>The environment creation time will vary, depending on the selected template.</p>
 </div>
 <ul>
 <li><strong>Templates</strong></li>
