--- a/docfx_project/site/home/techguides/export-import-database.html
+++ b/docfx_project/site/home/techguides/export-import-database.html
@@ -92,7 +92,6 @@
 <li>And then choose a T24 template with the version that you need (in current example R18.11).</li>
 <li><em>Labels field is optional</em>.</li>
 <li>Click <strong>Create</strong> button.</li>
-<li>Wait about 15-20 minutes to see the action completed and to have your environment available.</li>
 </ul>
 <div class="NOTE"><h5>Note</h5><p>To see how to create an environment, please also check <a href="environment-creation-in-paas.html" target="_blank"><strong>this</strong></a> user guide.</p>
 </div>
@@ -237,7 +236,7 @@
 <li>MANAGE _ ENVIRONMENTS</li>
 <li>ALLOW -  EXPORT  - ENVIRONMENT</li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
