--- a/docfx_project/site/home/techguides/fcm-configuration.html
+++ b/docfx_project/site/home/techguides/fcm-configuration.html
@@ -113,8 +113,6 @@
 <li>Click <strong>Create</strong></li>
 </ul>
 <p><img src="images/fcm-environment-fields.png" alt="new environment"></p>
-<div class="NOTE"><h5>Note</h5><p>It will take about 15 minutes for the new environment to be created</p>
-</div>
 <h2 id="fcm-endpoints">FCM Endpoints</h2>
 <ul>
 <li>Check the two endpoints available in the FCM application:<ul>
@@ -202,7 +200,7 @@ When disconnecting and re-connecting to the server, the <strong>input</strong> f
 <li>REDEPLOY _ ENVIRONMENT</li>
 <li>MANAGE _ ENVIRONMENTS </li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
