--- a/docfx_project/site/home/techguides/stage.html
+++ b/docfx_project/site/home/techguides/stage.html
@@ -121,6 +121,8 @@
 <p>Any other created stage can be deleted at any moment as it is not dependent of the subsequent features added such as components and products. Components and Products belong to the streams.</p>
 <p>Example of the default stage defined into the metadata (you can set any name you prefer instead of <em>devstream</em>):</p>
 <p><img src="images/stage-metadata.png" alt=""></p>
+<p> To see the details of a stage please make sure to first select the stream from the top-right-side menu. The list with the stages that belong to the respective stream will be displayed on the left side of the page:
+<img src="images/stages-see-details.png" alt=""></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
@@ -129,7 +131,7 @@
 <li>UPDATE _ STAGE</li>
 <li>DELETE _ STAGE</li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
