--- a/docfx_project/site/home/techguides/user-creation-in-paas.html
+++ b/docfx_project/site/home/techguides/user-creation-in-paas.html
@@ -156,11 +156,14 @@ See further below how to generate the SSH key</p>
 </li>
 </ul>
 <p><br></p>
+<p> To see the details of a user please make sure to first select the user from the left-side users list:
+<img src="images/user-see-details.png" alt=""></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to create a user the below permission needs to be enabled for your user:</p>
 <ul>
 <li>CREATE _ USER</li>
 </ul>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
