--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -84,7 +84,8 @@
 <p>This document can be used by technical staff who need to create Users on the Temenos Continuous Deployment Platform and associate to each user a ssh key. </p>
 <h2 id="how-to-create-users">How to create Users</h2>
 <p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access and use the portal using the URL link. In this way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
-<p>The users can access their organisation only, view their user profiles and change their password. Note that only the users with the &#39;Amin&#39; permission can create more users. To create a new user, please refer to the below:</p>
+<p>The users can access their organisation only, view their user profiles and perform various operations according to the set of user permissions set by the Organisation Administrator.</p>
+<p> Note that only the users with the &#39;Amin&#39; permission can create more users. To create a new user, please refer to the below:</p>
 <p>•   Login to your organisation portal using the link and the credentials provided.</p>
 <p><img src="images/user-login.png" alt="portal login"></p>
 <p>•   Go to the menu on the left and then click Users tab, as below:</p>
@@ -93,6 +94,8 @@
 <p>Click <strong>New user</strong> button on the top-right corner:</p>
 <p><img src="D:\DocumentationPortal\temenos-platform-documentation\docfx_project\home\techguides\images\users-tab.png" alt=""></p>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
+<blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
+</blockquote>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
 <p>The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
