--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -118,13 +118,13 @@
 <p><br></p>
 <ul>
 <li><p><strong>Editing</strong> an environment - allows you to change the name and the description of an environment</p>
-<p><img src="images/button-edit.png" alt="start"> </p>
+<p><img src="./images/button-edit.png" alt="start"> </p>
 </li>
 </ul>
 <p><br></p>
 <ul>
 <li><p><strong>Deleting</strong> and environment - removes all resources including VMs and configuration repository that are part of an Environment</p>
-<p><img src="images/button-delete.png" alt="delete"> </p>
+<p><img src="./images/button-delete.png" alt="delete"> </p>
 </li>
 </ul>
 <h2 id="t24-release-section---available-actions">T24 Release section - available actions</h2>
