--- a/docfx_project/site/home/temenos-cloud-templates.html
+++ b/docfx_project/site/home/temenos-cloud-templates.html
@@ -95,7 +95,7 @@
 <p><img src="images/sandbox-templates.png" alt=""></p>
 <p>By default, new Templates are added with each monthly release of T24. These Templates follow a standard pattern, configuration and technology stack, but with the most recent releases of T24 being deployed.</p>
 <p>However, the Temenos Continuous Deployment Platform team also offer the ability to create customised Templates for clients. </p>
-<p>Furthermore, please find <strong><a href="http://documentation.temenos.cloud/home/temenos-cloud-templates-list.html?q=templa">here</a></strong> the current templates catalogue. The standard configuration of each template can be explored by clicking the required template from the list. </p>
+<p>Furthermore, please find <strong><a href="http://documentation.temenos.cloud/home/techguides/templates-list.html">here</a></strong> the current templates catalogue. The standard configuration of each template can be explored by clicking the required template from the list. </p>
 <p><br></p>
               <hr>
               
