--- a/home/techguides/access-fcm-ud-directories.html
+++ b/home/techguides/access-fcm-ud-directories.html
@@ -100,7 +100,7 @@
 <ul>
 <li>Host name &gt; copy it from the environment endpoint: sftp.temenos.cloud <em>(see image below)</em></li>
 <li><p>User name &gt; input the exact name of the user added to the portal
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="./images/access-fcm-endpoints.png" alt="sftp fields"></p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/access-fcm-endpoints.png" alt="sftp fields"></p>
 <ul>
 <li>click <strong>Advanced</strong></li>
 <li>on the new screen (the right screenshot below), select <strong>SSH -  Authentication</strong> </li>
