--- a/home/tcd-hosting-options.html
+++ b/home/tcd-hosting-options.html
@@ -83,14 +83,13 @@
 
 <p>The Temenos Continuous Deployment platform has two distinct deployment domains as below:</p>
 <ul>
-<li><p>the “Platform Cloud” where the provisioning software runs;</p>
-</li>
-<li><p>the “Target Cloud” where the T24 environments are provisioned.</p>
-</li>
+<li>the “Platform Cloud” where the provisioning software runs;</li>
+<li>the “Target Cloud” where the T24 environments are provisioned.</li>
 </ul>
-<p><br>There are a number of options: </p>
-<p>&nbsp; &nbsp;1. All hosted on Temenos SaaS - this is Azure;</p>
-<p>&nbsp; &nbsp;2. All hosted on the bank’s cloud - all hosted on the bank’s AWS account.  <br></p>
+<p><br>There are a number of options:
+<br>&nbsp; &nbsp;1. All hosted on Temenos SaaS - this is Azure;
+<br>&nbsp; &nbsp;2. The Platform component is hosted on Temenos SaaS. The Target Cloud is a bank’s public cloud - the hybrid model (target cloud is an Azure subscription owned by the bank);  <br>
+&nbsp; &nbsp;3. All hosted on the bank’s cloud - all hosted on the bank’s AWS account.  <br></p>
 <p><br>
 The advantages of the various offerings:
 <br>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong>a) Temenos hosted</strong>  - this is a full-service SaaS offering with Support desk, monitoring, SLAs. The bank benefits from the regular rollout of new features. There are no technical pre-requisites to use the service. A service/hosting agreement is required with Temenos SaaS.<br><br>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong>b) The bank runs it all on their public cloud (AWS or Azure)</strong> - there is no service element to this; the bank has full responsibility for installing and operating the platform. 
