--- a/home/architecture.html
+++ b/home/architecture.html
@@ -176,7 +176,7 @@
 <td>SFTP   is the protocol used to download file exports (environment or database   exports)</td>
 </tr>
 <tr>
-<td>Design   Studio (Optional)</td>
+<td>Design   Studio</td>
 <td>Design   Studio is the IDE (Integrated Development Environment) produced by Temenos   for developing changes in T24 systems. Design Studio itself does not form   part of the Deployment Platform, but change outputs from this tool are   supported within the Configuration Repository.</td>
 </tr>
 </tbody>
