--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -132,14 +132,18 @@ An organization can define as many components as needed but should have all mand
 <h1 id="how-to-login-to-artifactory">How to login to Artifactory</h1>
 <p>Every user created in the Temenos Continuous Deployment Platform can log in with the platform’s credential on the Artifactory server as well. Follow the steps below to login to the Artifactory:</p>
 <ul>
-<li>go on the self-side menu on the portal and click on <strong>Metadata</strong>. 
-<img src="images/sanity-general.png" alt=""></li>
-<li>here are displayed the metadata settings:
-<img src="images/components-and-products-artifactoryurl.png" alt=""></li>
-<li>copy the <strong>Artifactory URL</strong> and open it in another browser. To login use with your credentials from the Temenos Continuous Deployment Platform. This is how your Artifactory will be displayed:
-<img src="images/artifactory-login.png" alt=""></li>
-<li>to see the artifactory repository, click on the Artifactory icon from the left-side menu. The repository belonging to your organisation will be displayed (to make sure you expand the right repository, always check the naming convention: repo-1dq4zcowcn75s1, where what follows after &#39;repo-&#39; represents the ID of your organisation:
-<img src="images/local-repository.png" alt=""></li>
+<li><p>go on the left-side menu on the portal and click on <strong>Metadata</strong>. 
+<img src="images/sanity-general.png" alt=""></p>
+</li>
+<li><p>here are the metadata settings:
+<img src="images/components-and-products-artifactoryurl.png" alt=""></p>
+</li>
+<li><p>copy the <strong>Artifactory URL</strong> and open it in another browser. To login use with your credentials from the Temenos Continuous Deployment Platform. This is how your Artifactory will be displayed:
+<img src="images/artifactory-login.png" alt=""></p>
+</li>
+<li><p>to see the artifactory repository, click on the Artifactory icon from the left-side menu. The repository belonging to your organisation will be displayed (to make sure you expand the right repository, always check the naming convention: repo-1dq4zcowcn75s1, where what follows after &#39;repo-&#39; represents the ID of your organisation:
+<img src="images/local-repository.png" alt=""></p>
+</li>
 </ul>
 <h2 id="how-to-upload-binaries-into-the-artifactory">How to upload binaries into the Artifactory</h2>
 <p>The users are enabled to download the existing artifacts or upload new artifacts that will be used for factories. This process can be done in two ways:</p>
